--- a/index.html
+++ b/index.html
@@ -363,7 +363,7 @@
             </div>
 
             <div class="col-lg-6">
-              <form action="https://docs.google.com/spreadsheets/d/e/2PACX-1vTl5iEDWkn2cy7yAuU-guX5OE3z4i2ImmVRJWI730cMLe2Jw7Atkep9XfLihVFduE4cU8pH_AIQslbJ/pubhtml" method="post" role="form" class="php-email-form">
+              <form action="forms/contact.php" method="post" role="form" class="php-email-form">
                 <div class="row gy-3">
 
                   <div class="col-lg-6">
