slider contant changed

--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
               <div class="services-block">
                 <i class="bi bi-briefcase"></i>
                 <span>UI/UX DESIGN</span>
-                <p class="separator">To an English person, it will seem like simplified English,told me what </p>
+                <p class="separator">"Gathering and evaluating user requirements, in collaboration with product managers and engineers." </p>
               </div>
             </div><!-- End testimonial item -->
 
@@ -140,7 +140,7 @@
               <div class="services-block">
                 <i class="bi bi-card-checklist"></i>
                 <span>BRAND IDENTITY</span>
-                <p class="separator">To an English person, it will seem like simplified English,told me what </p>
+                <p class="separator">"Building a positive brand image can bring in consistent sales and make product roll-outs more successful." </p>
               </div>
             </div><!-- End testimonial item -->
 
@@ -148,7 +148,7 @@
               <div class="services-block">
                 <i class="bi bi-bar-chart"></i>
                 <span>WEB DESIGN</span>
-                <p class="separator">To an English person, it will seem like simplified English,told me what </p>
+                <p class="separator">"We love creative and design with passion of building epic web experiences to blow people's minds."</p>
               </div>
             </div><!-- End testimonial item -->
 
@@ -156,7 +156,7 @@
               <div class="services-block">
                 <i class="bi bi-binoculars"></i>
                 <span>MOBILE APPS</span>
-                <p class="separator">To an English person, it will seem like simplified English,told me what </p>
+                <p class="separator">"Tech will transform from something we actively use to a more seamless integrated experience that is ‘on’ all the time." </p>
               </div>
             </div><!-- End testimonial item -->
 
@@ -164,7 +164,7 @@
               <div class="services-block">
                 <i class="bi bi-brightness-high"></i>
                 <span>Analytics</span>
-                <p class="separator">To an English person, it will seem like simplified English,told me what </p>
+                <p class="separator">"Learn to be as analytical about things of which you are credulous as you are of those which you criticise."</p>
               </div>
             </div><!-- End testimonial item -->
 
@@ -172,7 +172,7 @@
               <div class="services-block">
                 <i class="bi bi-calendar4-week"></i>
                 <span>PHOTOGRAPHY</span>
-                <p class="separator">To an English person, it will seem like simplified English,told me what </p>
+                <p class="separator">"Photography, to me, is catching a moment which is passing, and which is true."</p>
               </div>
             </div><!-- End testimonial item -->
 
