--- a/index.html
+++ b/index.html
@@ -279,7 +279,7 @@
 
       <div class="container">
         <div class="section-title text-center">
-          <h2>journal</h2>
+          <h2>Photos Taken</h2>
         </div>
       </div>
 
@@ -287,15 +287,15 @@
         <div class="journal-block">
           <div class="row">
 
-            <div class="col-lg-4 col-md-6">
+            <div class="col-lg-12 col-md-12 text-center">
               <div class="journal-info">
 
-                <a href="blog-single.html"><img src="assets/img/blog-post-1.jpg" class="img-responsive" alt="img"></a>
+                <a href="blog-single.html"><img src="assets/img/blog-post-1.jpg" class="img-fluid" alt="img"></a>
 
                 <div class="journal-txt">
 
-                  <h4><a href="blog-single.html">SO LETS MAKE THE MOST IS BEAUTIFUL</a></h4>
-                  <p class="separator">To an English person, it will seem like simplified English
+                  <h4><a href="blog-single.html">PHOTO GALLERY</a></h4>
+                  <p class="separator">"Let's Explore The Real Definition Of Photography"
                   </p>
 
                 </div>
@@ -303,43 +303,9 @@
               </div>
             </div>
 
-            <div class="col-lg-4 col-md-6">
-              <div class="journal-info">
+           
 
-                <a href="blog-single.html"><img src="assets/img/blog-post-2.jpg" class="img-responsive" alt="img"></a>
-
-                <div class="journal-txt">
-
-                  <h4><a href="blog-single.html">WE'RE GONA MAKE DREAMS COMES</a></h4>
-                  <p class="separator">To an English person, it will seem like simplified English
-                  </p>
-
-                </div>
-
-              </div>
-            </div>
-
-            <div class="col-lg-4 col-md-6">
-              <div class="journal-info">
-
-                <a href="blog-single.html"><img src="assets/img/blog-post-3.jpg" class="img-responsive" alt="img"></a>
-
-                <div class="journal-txt">
-
-                  <h4><a href="blog-single.html">NEW LIFE CIVILIZATIONS TO BOLDLY</a></h4>
-                  <p class="separator">To an English person, it will seem like simplified English
-                  </p>
-
-                </div>
-
-              </div>
-            </div>
-
-          </div>
-        </div>
-      </div>
-
-    </div><!-- End Journal Section -->
+          
 
     <!-- ======= Contact Section ======= -->
     <div id="contact" class="paddsection">
