--- a/index.html
+++ b/index.html
@@ -290,7 +290,7 @@
             <div class="col-lg-12 col-md-12 text-center">
               <div class="journal-info">
 
-                <a href="blog-single.html"><img src="assets/img/blog-post-1.jpg" class="img-fluid" alt="img"></a>
+                <a href="blog-single.html"><img src="assets/img/cover.jpg" class="img-fluid" alt="img"></a>
 
                 <div class="journal-txt">
 
