--- a/blog-single.html
+++ b/blog-single.html
@@ -208,6 +208,18 @@
     />
   </div>
 </div>
+
+<div id="footer" class="text-center">
+  <div class="container">
+    <div class="socials-media text-center">
+
+      <ul class="list-unstyled">
+        
+        <li><a href="https://instagram.com/kl_58_photography_?igshid=YmMyMTA2M2Y="><i class="bi bi-instagram"></i> <p style="color: black; font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif  ">@ kl_58_photography_</p></a></li>
+        
+      </ul>
+
+    </div>
 <!-- Gallery -->
 
 
@@ -263,7 +275,7 @@
 
       </div>
 
-      <p>&copy; Copyrights Folio. All rights reserved.</p>
+      <p>&copy; Copyrights Mevin K. All rights reserved.</p>
 
       <div class="credits">
         <!--
@@ -272,7 +284,7 @@
         Licensing information: https://bootstrapmade.com/license/
         Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/buy/?theme=Folio
       -->
-        Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
+        Designed by <a href="#">Mevin K</a>
       </div>
 
     </div>
