--- a/portfolio-details2.html
+++ b/portfolio-details2.html
@@ -27,10 +27,8 @@
   <link href="assets/css/style.css" rel="stylesheet">
 
   <!-- =======================================================
-  * Template Name: Folio - v4.10.0
-  * Template URL: https://bootstrapmade.com/folio-bootstrap-portfolio-template/
-  * Author: BootstrapMade.com
-  * License: https://bootstrapmade.com/license/
+ 
+  * 
   ======================================================== -->
 </head>
 
@@ -104,13 +102,12 @@
               <div class="swiper-wrapper align-items-center">
 
                 
-
                 <div class="swiper-slide">
                   <img src="https://images.unsplash.com/photo-1484417894907-623942c8ee29?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxzZWFyY2h8MTV8fHdlYiUyMGhvc3Rpbmd8ZW58MHx8MHx8&w=1000&q=80" alt="">
                 </div>
 
-                <div class="swiper-slide"> 
-                <img src="https://wallpaperaccess.com/full/1657878.jpg" alt="">
+                <div class="swiper-slide">
+                  <img src="https://wallpaperaccess.com/full/8091889.jpg" alt="">
                 </div>
 
               </div>
@@ -122,7 +119,7 @@
             <div class="portfolio-info">
               <h3>Project information</h3>
               <ul>
-                <li><strong>Category</strong>: Web design</li>
+                <li><strong>Category</strong>: Card design</li>
                 <li><strong>Client</strong>: ASU Company</li>
                 <li><strong>Project date</strong>: 01 March, 2020</li>
                 <li><strong>Project URL</strong>: <a href="#">www.example.com</a></li>
