--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
           <li><a href="https://www.facebook.com/mevin.prakash?mibextid=ZbWKwL"><i class="bi bi-facebook"></i></a></li>
           <li><a href="#"><i class="bi bi-twitter"></i></a></li>
           <li><a href="https://instagram.com/mev.i_n?igshid=YmMyMTA2M2Y="><i class="bi bi-instagram"></i></a></li>
-          <li><a href="www.linkedin.com/in/mevin88"><i class="bi bi-linkedin"></i></a></li>
+          <li><a href="https://www.linkedin.com/in/mevin88/"><i class="bi bi-linkedin"></i></a></li>
         </ul>
       </div>
     </div>
@@ -382,7 +382,7 @@
           <li><a href="https://www.facebook.com/mevin.prakash?mibextid=ZbWKwL"><i class="bi bi-facebook"></i></a></li>
           <li><a href="#"><i class="bi bi-twitter"></i></a></li>
           <li><a href="https://instagram.com/mev.i_n?igshid=YmMyMTA2M2Y="><i class="bi bi-instagram"></i></a></li>
-          <li><a href="www.linkedin.com/in/mevin88"><i class="bi bi-linkedin"></i></a></li>
+          <li><a href="https://www.linkedin.com/in/mevin88/"><i class="bi bi-linkedin"></i></a></li>
         </ul>
 
       </div>
