portfolio and enquiry mail send feature added

--- a/portfolio-details1.html
+++ b/portfolio-details1.html
@@ -103,11 +103,53 @@
 
                 
                 <div class="swiper-slide">
-                  <img src="https://images.unsplash.com/photo-1484417894907-623942c8ee29?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxzZWFyY2h8MTV8fHdlYiUyMGhvc3Rpbmd8ZW58MHx8MHx8&w=1000&q=80" alt="">
+                  <img src="/assets/img/ez cart/Screenshot (15).png" alt="">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="https://wallpapercave.com/wp/wp9517044.jpg" alt="">
+                  <img src="/assets/img/ez cart/Screenshot (16).png" alt="">
+                </div>
+                <div class="swiper-slide">
+                  <img src="/assets/img/ez cart/Screenshot (17).png" alt="">
+                </div>
+                <div class="swiper-slide">
+                  <img src="/assets/img/ez cart/Screenshot (18).png" alt="">
+                </div>
+                <div class="swiper-slide">
+                  <img src="/assets/img/ez cart/Screenshot (19).png" alt="">
+                </div>
+                <div class="swiper-slide">
+                  <img src="/assets/img/ez cart/Screenshot (20).png" alt="">
+                </div>
+                <div class="swiper-slide">
+                  <img src="/assets/img/ez cart/Screenshot (21).png" alt="">
+                </div>
+                <div class="swiper-slide">
+                  <img src="/assets/img/ez cart/Screenshot (22).png" alt="">
+                </div>
+                <div class="swiper-slide">
+                  <img src="/assets/img/ez cart/Screenshot (23).png" alt="">
+                </div>
+                <div class="swiper-slide">
+                  <img src="/assets/img/ez cart/Screenshot (25).png" alt="">
+                </div>
+                <div class="swiper-slide">
+                  <img src="/assets/img/ez cart/Screenshot (26).png" alt="">
+                </div>
+                <div class="swiper-slide">
+                  <img src="/assets/img/ez cart/Screenshot (27).png" alt="">
+                </div>
+                <div class="swiper-slide">
+                  <img src="/assets/img/ez cart/Screenshot (28).png" alt="">
+                </div>
+                <div class="swiper-slide">
+                  <img src="/assets/img/ez cart/Screenshot (29).png" alt="">
+                </div>
+                <div class="swiper-slide">
+                  <img src="/assets/img/ez cart/Screenshot (31).png" alt="">
+                </div>
+                <div class="swiper-slide">
+                  <img src="/assets/img/ez cart/Screenshot (32).png" alt="">
                 </div>
 
               </div>
@@ -119,8 +161,8 @@
             <div class="portfolio-info">
               <h3>Project information</h3>
               <ul>
-                <li><strong>Category</strong>: Application design</li>
-                <li><strong>Client</strong>: ASU Company</li>
+                <li><strong>Category</strong>: E commerce shopping cart</li>
+                <li><strong>Client</strong>: For Me</li>
                 <li><strong>Project date</strong>: 01 March, 2020</li>
                 <li><strong>Project URL</strong>: <a href="#">www.example.com</a></li>
               </ul>
@@ -128,7 +170,8 @@
             <div class="portfolio-description">
               <h2>Project Description</h2>
               <p>
-                Autem ipsum nam porro corporis rerum. Quis eos dolorem eos itaque inventore commodi labore quia quia. Exercitationem repudiandae officiis neque suscipit non officia eaque itaque enim. Voluptatem officia accusantium nesciunt est omnis tempora consectetur dignissimos. Sequi nulla at esse enim cum deserunt eius.
+                Welcome to our E-commerce website, where we have combined cutting-edge technology with user-friendly design to provide you with the ultimate shopping experience. Here's what makes our platform stand out:
+                Responsive Design with Bootstrap,Dynamic UI with Handlebars,Node.js and Express Backend,MongoDB Database,User Authentication and Profiles,Effortless Shopping Cart,Secure Payment Processing
               </p>
             </div>
           </div>
@@ -149,7 +192,7 @@
           <li><a href="https://www.facebook.com/mevin.prakash?mibextid=ZbWKwL"><i class="bi bi-facebook"></i></a></li>
           <li><a href="#"><i class="bi bi-twitter"></i></a></li>
           <li><a href="https://instagram.com/mev.i_n?igshid=YmMyMTA2M2Y="><i class="bi bi-instagram"></i></a></li>
-          <li><a href="#"><i class="bi bi-linkedin"></i></a></li>
+          <li><a href="https://www.linkedin.com/in/mevin88/"><i class="bi bi-linkedin"></i></a></li>
         </ul>
 
       </div>
