--- a/portfolio-details3.html
+++ b/portfolio-details3.html
@@ -27,10 +27,8 @@
   <link href="assets/css/style.css" rel="stylesheet">
 
   <!-- =======================================================
-  * Template Name: Folio - v4.10.0
-  * Template URL: https://bootstrapmade.com/folio-bootstrap-portfolio-template/
-  * Author: BootstrapMade.com
-  * License: https://bootstrapmade.com/license/
+ 
+  * 
   ======================================================== -->
 </head>
 
@@ -104,14 +102,13 @@
               <div class="swiper-wrapper align-items-center">
 
                 
-
                 <div class="swiper-slide">
-                  <img src="/assets/img/workout Buddy/Screenshot (35).png" alt="">
+                  <img src="/assets/img/recipes world/Screenshot (33).png" alt="">
                 </div>
 
-                <!-- <div class="swiper-slide"> 
-                <img src="https://wallpaperaccess.com/full/1657878.jpg" alt="">
-                </div> -->
+                <div class="swiper-slide">
+                  <img src="/assets/img/recipes world/Screenshot (34).png" alt="">
+                </div>
 
               </div>
               <div class="swiper-pagination"></div>
@@ -122,7 +119,7 @@
             <div class="portfolio-info">
               <h3>Project information</h3>
               <ul>
-                <li><strong>Category</strong>: Workout App</li>
+                <li><strong>Category</strong>: Recipes world Web</li>
                 <li><strong>Client</strong>: For Me</li>
                 <li><strong>Project date</strong>: 01 March, 2020</li>
                 <li><strong>Project URL</strong>: <a href="#">www.example.com</a></li>
@@ -131,8 +128,7 @@
             <div class="portfolio-description">
               <h2>Project Description</h2>
               <p>
-                Welcome to the MERN Web Workout App, your ultimate destination for achieving your fitness goals and maintaining a healthy lifestyle. This web application is built using the MERN (MongoDB, Express.js, React, Node.js)
-                User Authentication,Workout Planner,Exercise Database,Responsive Design
+                These websites typically serve as a valuable resource for food enthusiasts, home cooks, and professional chefs, offering a wide range of features and content that cater to various culinary preferences and skill levels
               </p>
             </div>
           </div>
