--- a/portfolio-details5.html
+++ b/portfolio-details5.html
@@ -27,10 +27,8 @@
   <link href="assets/css/style.css" rel="stylesheet">
 
   <!-- =======================================================
-  * Template Name: Folio - v4.10.0
-  * Template URL: https://bootstrapmade.com/folio-bootstrap-portfolio-template/
-  * Author: BootstrapMade.com
-  * License: https://bootstrapmade.com/license/
+ 
+  * 
   ======================================================== -->
 </head>
 
@@ -104,14 +102,20 @@
               <div class="swiper-wrapper align-items-center">
 
                 
-
                 <div class="swiper-slide">
-                  <img src="https://images.unsplash.com/photo-1484417894907-623942c8ee29?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxzZWFyY2h8MTV8fHdlYiUyMGhvc3Rpbmd8ZW58MHx8MHx8&w=1000&q=80" alt="">
+                  <img src="/assets/img/olx/Screenshot (40).png" alt="">
+                </div>
+                <div class="swiper-slide">
+                  <img src="/assets/img/olx/Screenshot (41).png" alt="">
+                </div>
+                <div class="swiper-slide">
+                  <img src="/assets/img/olx/Screenshot (42).png" alt="">
+                </div>
+                <div class="swiper-slide">
+                  <img src="/assets/img/olx/Screenshot (43).png" alt="">
                 </div>
 
-                <div class="swiper-slide"> 
-                <img src="https://wallpaperaccess.com/full/1657878.jpg" alt="">
-                </div>
+                
 
               </div>
               <div class="swiper-pagination"></div>
@@ -122,8 +126,8 @@
             <div class="portfolio-info">
               <h3>Project information</h3>
               <ul>
-                <li><strong>Category</strong>: Web design</li>
-                <li><strong>Client</strong>: ASU Company</li>
+                <li><strong>Category</strong>: Olx Clone</li>
+                <li><strong>Client</strong>: For Me</li>
                 <li><strong>Project date</strong>: 01 March, 2020</li>
                 <li><strong>Project URL</strong>: <a href="#">www.example.com</a></li>
               </ul>
@@ -131,7 +135,7 @@
             <div class="portfolio-description">
               <h2>Project Description</h2>
               <p>
-                Autem ipsum nam porro corporis rerum. Quis eos dolorem eos itaque inventore commodi labore quia quia. Exercitationem repudiandae officiis neque suscipit non officia eaque itaque enim. Voluptatem officia accusantium nesciunt est omnis tempora consectetur dignissimos. Sequi nulla at esse enim cum deserunt eius.
+                Olx Clone using React,Firebase Database
               </p>
             </div>
           </div>
@@ -152,7 +156,7 @@
           <li><a href="https://www.facebook.com/mevin.prakash?mibextid=ZbWKwL"><i class="bi bi-facebook"></i></a></li>
           <li><a href="#"><i class="bi bi-twitter"></i></a></li>
           <li><a href="https://instagram.com/mev.i_n?igshid=YmMyMTA2M2Y="><i class="bi bi-instagram"></i></a></li>
-          <li><a href="#"><i class="bi bi-linkedin"></i></a></li>
+          <li><a href="https://www.linkedin.com/in/mevin88/"><i class="bi bi-linkedin"></i></a></li>
         </ul>
 
       </div>
