--- a/portfolio-details1.html
+++ b/portfolio-details1.html
@@ -103,7 +103,7 @@
 
                 
                 <div class="swiper-slide">
-                  <img src="/assets/img/ez cart/Screenshot (15).png" alt="">
+                  <img src="https://ibb.co/C6MDHtv" alt="">
                 </div>
 
                 <div class="swiper-slide">
