--- a/portfolio-details1.html
+++ b/portfolio-details1.html
@@ -107,7 +107,7 @@
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="/assets/img/ez cart/Screenshot (16).png" alt="">
+                  <img src="/assets/img/ez cart/Screenshot (16).PNG" alt="">
                 </div>
                 <div class="swiper-slide">
                   <img src="/assets/img/ez cart/Screenshot (17).png" alt="">
