--- a/portfolio-details1.html
+++ b/portfolio-details1.html
@@ -103,53 +103,53 @@
 
                 
                 <div class="swiper-slide">
-                  <img src="https://ibb.co/C6MDHtv" alt="">
+                  <img src="/assets/img/ezcart/img1.PNG" alt="">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="/assets/img/ez cart/Screenshot (16).png" alt="">
+                  <img src="/assets/img/ezcart/Screenshot (16).png" alt="">
                 </div>
                 <div class="swiper-slide">
-                  <img src="/assets/img/ez cart/Screenshot (17).png" alt="">
+                  <img src="/assets/img/ezcart/Screenshot (17).png" alt="">
                 </div>
                 <div class="swiper-slide">
-                  <img src="/assets/img/ez cart/Screenshot (18).png" alt="">
+                  <img src="/assets/img/ezcart/Screenshot (18).png" alt="">
                 </div>
                 <div class="swiper-slide">
-                  <img src="/assets/img/ez cart/Screenshot (19).png" alt="">
+                  <img src="/assets/img/ezcart/Screenshot (19).png" alt="">
                 </div>
                 <div class="swiper-slide">
-                  <img src="/assets/img/ez cart/Screenshot (20).png" alt="">
+                  <img src="/assets/img/ezcart/Screenshot (20).png" alt="">
                 </div>
                 <div class="swiper-slide">
-                  <img src="/assets/img/ez cart/Screenshot (21).png" alt="">
+                  <img src="/assets/img/ezcart/Screenshot (21).png" alt="">
                 </div>
                 <div class="swiper-slide">
-                  <img src="/assets/img/ez cart/Screenshot (22).png" alt="">
+                  <img src="/assets/img/ezcart/Screenshot (22).png" alt="">
                 </div>
                 <div class="swiper-slide">
-                  <img src="/assets/img/ez cart/Screenshot (23).png" alt="">
+                  <img src="/assets/img/ezcart/Screenshot (23).png" alt="">
                 </div>
                 <div class="swiper-slide">
-                  <img src="/assets/img/ez cart/Screenshot (25).png" alt="">
+                  <img src="/assets/img/ezcart/Screenshot (25).png" alt="">
                 </div>
                 <div class="swiper-slide">
-                  <img src="/assets/img/ez cart/Screenshot (26).png" alt="">
+                  <img src="/assets/img/ezcart/Screenshot (26).png" alt="">
                 </div>
                 <div class="swiper-slide">
-                  <img src="/assets/img/ez cart/Screenshot (27).png" alt="">
+                  <img src="/assets/img/ezcart/Screenshot (27).png" alt="">
                 </div>
                 <div class="swiper-slide">
-                  <img src="/assets/img/ez cart/Screenshot (28).png" alt="">
+                  <img src="/assets/img/ezcart/Screenshot (28).png" alt="">
                 </div>
                 <div class="swiper-slide">
-                  <img src="/assets/img/ez cart/Screenshot (29).png" alt="">
+                  <img src="/assets/img/ezcart/Screenshot (29).png" alt="">
                 </div>
                 <div class="swiper-slide">
-                  <img src="/assets/img/ez cart/Screenshot (31).png" alt="">
+                  <img src="/assets/img/ezcart/Screenshot (31).png" alt="">
                 </div>
                 <div class="swiper-slide">
-                  <img src="/assets/img/ez cart/Screenshot (32).png" alt="">
+                  <img src="/assets/img/ezcart/Screenshot (32).png" alt="">
                 </div>
 
               </div>
