--- a/portfolio-details1.html
+++ b/portfolio-details1.html
@@ -110,7 +110,7 @@
                   <img src="https://www.linkpicture.com/q/img1_2.png" alt="">
                 </div>
                 <div class="swiper-slide">
-                  <img src="./ezcart/img1.png" alt="">
+                  <img src="./ezcart/img.jpg" alt="">
                 </div>
                 <div class="swiper-slide">
                   <img src="/assets/img/ezcart/Screenshot (18).png" alt="">
