--- a/portfolio-details1.html
+++ b/portfolio-details1.html
@@ -103,7 +103,7 @@
 
                 
                 <div class="swiper-slide">
-                  <img src="./ezcart/img1.png" alt="">
+                  <img src="./assets/img/ezcart/img1.png" alt="">
                 </div>
 
                 <div class="swiper-slide">
