--- a/portfolio-details1.html
+++ b/portfolio-details1.html
@@ -107,49 +107,49 @@
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="./ezcart/img2.png" alt="">
+                  <img src="/assets/img/ezcart/img2.png" alt="">
                 </div>
                 <div class="swiper-slide">
-                  <img src="./assets/img/img.jpg" alt="">
+                  <img src="./assets/img/ezcart/img3.png" alt="">
                 </div>
                 <div class="swiper-slide">
-                  <img src="/assets/img/ezcart/Screenshot (18).png" alt="">
+                  <img src="./assets/img/ezcart/img4.png" alt="">
                 </div>
                 <div class="swiper-slide">
-                  <img src="/assets/img/ezcart/Screenshot (19).png" alt="">
+                  <img src="./assets/img/ezcart/img5.png" alt="">
                 </div>
                 <div class="swiper-slide">
-                  <img src="/assets/img/ezcart/Screenshot (20).png" alt="">
+                  <img src="./assets/img/ezcart/img6.png" alt="">
                 </div>
                 <div class="swiper-slide">
-                  <img src="/assets/img/ezcart/Screenshot (21).png" alt="">
+                  <img src="./assets/img/ezcart/img7.png" alt="">
                 </div>
                 <div class="swiper-slide">
-                  <img src="/assets/img/ezcart/Screenshot (22).png" alt="">
+                  <img src="./assets/img/ezcart/img8.png" alt="">
                 </div>
                 <div class="swiper-slide">
-                  <img src="/assets/img/ezcart/Screenshot (23).png" alt="">
+                  <img src="./assets/img/ezcart/img9.png" alt="">
                 </div>
                 <div class="swiper-slide">
-                  <img src="/assets/img/ezcart/Screenshot (25).png" alt="">
+                  <img src="/assets/img/ezcart/img10.png" alt="">
                 </div>
                 <div class="swiper-slide">
-                  <img src="/assets/img/ezcart/Screenshot (26).png" alt="">
+                  <img src="./assets/img/ezcart/img11.png" alt="">
                 </div>
                 <div class="swiper-slide">
-                  <img src="/assets/img/ezcart/Screenshot (27).png" alt="">
+                  <img src="./assets/img/ezcart/img12.png" alt="">
                 </div>
                 <div class="swiper-slide">
-                  <img src="/assets/img/ezcart/Screenshot (28).png" alt="">
+                  <img src="./assets/img/ezcart/img13.png" alt="">
                 </div>
                 <div class="swiper-slide">
-                  <img src="/assets/img/ezcart/Screenshot (29).png" alt="">
+                  <img src="./assets/img/ezcart/img14.png" alt="">
                 </div>
                 <div class="swiper-slide">
-                  <img src="/assets/img/ezcart/Screenshot (31).png" alt="">
+                  <img src="./assets/img/ezcart/img15.png" alt="">
                 </div>
                 <div class="swiper-slide">
-                  <img src="/assets/img/ezcart/Screenshot (32).png" alt="">
+                  <img src="./assets/img/ezcart/img16.png" alt="">
                 </div>
 
               </div>
