--- a/portfolio-details1.html
+++ b/portfolio-details1.html
@@ -105,9 +105,8 @@
                 <div class="swiper-slide">
                   <img src="./assets/img/ezcart/img1.png" alt="">
                 </div>
-
                 <div class="swiper-slide">
-                  <img src="/assets/img/ezcart/img2.png" alt="">
+                  <img src="./assets/img/ezcart/img2.png" alt="">
                 </div>
                 <div class="swiper-slide">
                   <img src="./assets/img/ezcart/img3.png" alt="">
