--- a/portfolio-details1.html
+++ b/portfolio-details1.html
@@ -130,7 +130,7 @@
                   <img src="./assets/img/ezcart/img9.png" alt="">
                 </div>
                 <div class="swiper-slide">
-                  <img src="/assets/img/ezcart/img10.png" alt="">
+                  <img src="./assets/img/ezcart/img10.png" alt="">
                 </div>
                 <div class="swiper-slide">
                   <img src="./assets/img/ezcart/img11.png" alt="">
