--- a/portfolio-details2.html
+++ b/portfolio-details2.html
@@ -106,7 +106,7 @@
                 
 
                 <div class="swiper-slide">
-                  <img src="/assets/img/workout Buddy/Screenshot (35).png" alt="">
+                  <img src="./assets/img/workout/img1.png" alt="">
                 </div>
 
                 <!-- <div class="swiper-slide"> 
