all img load success full

--- a/portfolio-details3.html
+++ b/portfolio-details3.html
@@ -103,11 +103,11 @@
 
                 
                 <div class="swiper-slide">
-                  <img src="/assets/img/recipes world/Screenshot (33).png" alt="">
+                  <img src="./assets/img/recipes/Screenshot (33).png" alt="">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="/assets/img/recipes world/Screenshot (34).png" alt="">
+                  <img src="./assets/img/recipes/Screenshot (34).png" alt="">
                 </div>
 
               </div>
