--- a/portfolio-details4.html
+++ b/portfolio-details4.html
@@ -103,16 +103,16 @@
 
                 
                 <div class="swiper-slide">
-                  <img src="/assets/img/netflix/Screenshot (36).png" alt="">
+                  <img src="./assets/img/netflix/Screenshot (36).png" alt="">
                 </div>
                 <div class="swiper-slide">
-                  <img src="/assets/img/netflix/Screenshot (37).png" alt="">
+                  <img src="./assets/img/netflix/Screenshot (37).png" alt="">
                 </div>
                 <div class="swiper-slide">
-                  <img src="/assets/img/netflix/Screenshot (38).png" alt="">
+                  <img src="./assets/img/netflix/Screenshot (38).png" alt="">
                 </div>
                 <div class="swiper-slide">
-                  <img src="/assets/img/netflix/Screenshot (39).png" alt="">
+                  <img src="./assets/img/netflix/Screenshot (39).png" alt="">
                 </div>
 
                 
