--- a/portfolio-details6.html
+++ b/portfolio-details6.html
@@ -103,16 +103,16 @@
 
                 
                 <div class="swiper-slide">
-                  <img src="/assets/img/SpaceX/Screenshot (44).png" alt="">
+                  <img src="./assets/img/spacex/Screenshot (44).png" alt="">
                 </div>
                 <div class="swiper-slide">
-                  <img src="/assets/img/SpaceX/Screenshot (45).png" alt="">
+                  <img src="./assets/img/spacex/Screenshot (45).png" alt="">
                 </div>
                 <div class="swiper-slide">
-                  <img src="/assets/img/SpaceX/Screenshot (46).png" alt="">
+                  <img src="./assets/img/spacex/Screenshot (46).png" alt="">
                 </div>
                 <div class="swiper-slide">
-                  <img src="/assets/img/SpaceX/Screenshot (47).png" alt="">
+                  <img src="./assets/img/spacex/Screenshot (47).png" alt="">
                 </div>
 
                 
