--- a/portfolio-details5.html
+++ b/portfolio-details5.html
@@ -103,16 +103,16 @@
 
                 
                 <div class="swiper-slide">
-                  <img src="/assets/img/olx/Screenshot (40).png" alt="">
+                  <img src="./assets/img/olx/Screenshot (40).png" alt="">
                 </div>
                 <div class="swiper-slide">
-                  <img src="/assets/img/olx/Screenshot (41).png" alt="">
+                  <img src="./assets/img/olx/Screenshot (41).png" alt="">
                 </div>
                 <div class="swiper-slide">
-                  <img src="/assets/img/olx/Screenshot (42).png" alt="">
+                  <img src="./assets/img/olx/Screenshot (42).png" alt="">
                 </div>
                 <div class="swiper-slide">
-                  <img src="/assets/img/olx/Screenshot (43).png" alt="">
+                  <img src="./assets/img/olx/Screenshot (43).png" alt="">
                 </div>
 
                 
