--- a/index.html
+++ b/index.html
@@ -326,7 +326,7 @@
             </div>
 
             <div class="col-lg-6">
-              <form onsubmit="sendEmail(); rest(); return false;" method="post" role="form" class="php-email-form">
+              <form onsubmit="sendEmail(); rest(); relod(); return false;" method="post" role="form" class="php-email-form" id="formid">
                 <div class="row gy-3">
 
                   <div class="col-lg-6">
@@ -354,13 +354,13 @@
                   </div>
 
                   <div class="col-lg-12">
-                    <div class="loading">Loading</div>
-                    <div class="error-message"></div>
-                    <div class="sent-message">Your message has been sent. Thank you!</div>
+                    <div class="loading" id="loading">Loading</div>
+                    <div class="error-message" id="fail">Oops Something went Wrong !!</div>
+                    <div class="sent-message" id="success">Your message has been sent. Thank you!</div>
                   </div>
 
                   <div class="mt-0">
-                    <input type="submit" class="btn btn-defeault btn-send" value="Send message">
+                    <input type="submit" class="btnn btn-defeault btn-send" value="Send message">
                   </div>
 
                 </div>
@@ -413,7 +413,8 @@
   <script src="assets/vendor/php-email-form/validate.js"></script>
   <script src="https://smtpjs.com/v3/smtp.js">
 </script>
-  <script>
+  <!-- <script>
+    
     function sendEmail(){
       Email.send({
     SecureToken : "59abed73-647d-4a5d-88fd-d79eedb028c5",
@@ -424,11 +425,13 @@
         + "<br> Email :" + document.getElementById("email").value
         + "<br> Subject :" + document.getElementById("subject").value
         + "<br> Message :" + document.getElementById("message").value
-}).then(
-  message => alert(message)
-);
+}).then((message)=>{
+  console.log(message);
+ 
+});
+  
     }
-  </script>
+  </script> -->
 
   <!-- Template Main JS File -->
   <script src="assets/js/main.js"></script>
