--- a/index.html
+++ b/index.html
@@ -341,7 +341,7 @@
 
                   <div class="col-lg-12">
                     <div class="loading" id="loading">Loading</div>
-                    <div class="error-message" id="fail">Oops Something went Wrong !!</div>
+                    <div class="error-message text-center" id="fail">Oops Something went Wrong !!</div>
                     <div class="sent-message" id="success">Your message has been sent. Thank you!</div>
                   </div>
 
